# CEDV-2015

./: README.md
battleship/: miniDemo.txt
battleship/blenderFiles/: SHIP.blend  SHIP.blend1  board.blend  board.blend1
battleship/engine/: README  makefile
battleship/engine/inc/: common.h  fleet.h  ship.h
battleship/engine/src/: #fleet.cpp#  common.cpp  fleet.cpp  ship.cpp
battleship/engine/test/: #main.cpp#  .#main.cpp  battleship  main.cpp  makefile
battleship/frontEnd/: _ogre_debug.txt  battleship  makefile  makefile~  ogre.cfg  plugins.cfg  resources.cfg
battleship/frontEnd/gui/: battleship.layout
battleship/frontEnd/include/: GuiInputHandler.h  GuiInputHandler.h~  GuiShip.h  MyApp.h  MyApp.h~  MyFrameListener.h  MyFrameListener.h~  board.h  board.h~  const.h  const.h~  ship.h~  shipOgreWrapper.h  shipOgreWrapper.h~
battleship/frontEnd/media/: Material.001.material  Popup.mesh  Popup.mesh.xml  WoodMat.material  YouLose.material  YouWin.material  acierto.material  agua.material  board.mesh  board.scene  casilla.mesh  casilla.mesh.xml  desconocido.material  fire.material  fire.particle  flare.tga  sheet.material  ship.mesh  ship.scene
battleship/frontEnd/src/: #shipOgreWrapper.cpp#  (+14 more)
battleship/mygui/: CMakeCache.txt  CMakeLists.txt  Makefile  README  build.sh  cmake_install.cmake
battleship/mygui/BATTLESHIP/: battleship.layout
battleship/mygui/config/: le_user_settings.xml  ogre.cfg  plugins.cfg  resources.xml
battleship/mygui/inc/: GuiShip.h
battleship/mygui/src/: GuiShip.cpp
battleship/mygui/test/: main.cpp
battleship/records/: makefile
(+6 files in other folders)
